Menu collapses sooner to avoid double rows

--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+/* @media (min-width: 1000px) { */
+@media (min-width: 700px) and (max-width: 1200px) { 
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+    .navbar-header .collapse, .navbar-toggle {
+        display:block !important;
+    }
+    .navbar-header {
+        float:none;
+    }
+}
+
 body {
 
   padding-top: 50px;
